# houmwork_to_OOP

./: .flake8  .gitignore  README.md  flake8  pyproject.toml
src/: category.py  main.py  product.py
tests/: test_category.py  test_product.py
