[tool.poetry]
name = "houmwork-to-oop"
version = "0.1.0"
description = ""
authors = ["Zherdev Igor <cardinal3300@.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = """ \\.git """

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 119

[tool.mypy]
strict_optional = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
ignore_missing_imports = true
exclude = 'venv'
